--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,2 @@
 PORT = 2121
-DB_STRING = mongodb+srv://demo:demo@cluster0.hcds1.mongodb.net/todos?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://demo:pFr8b5V7wwoWoZ96@cluster0.m94bk8b.mongodb.net/?retryWrites=true&w=majority
